<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/active_background"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvHeadline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_height="wrap_content"
            android:textColor="@color/font_feed_header_older"
            android:textSize="@dimen/font_primary"
            app:fontName="@string/font_feed_headline"
            tools:text="Dr. Reddy’s Laboratory Dr. Reddy’s Laboratory" />

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_secondary"
            android:textSize="@dimen/font_secondary"
            app:fontName="@string/font_feed_time"
            tools:text="02:00 PM" />

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_margin" />

    <in.dsij.acemomentum.view.MyTextView
        android:id="@+id/tvSummery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font_secondary"
        android:textSize="@dimen/font_secondary"
        app:fontName="@string/font_feed_summery"
        tools:text="Buy Triggered CMP @2760, Recommended buy above 2760" />


</LinearLayout>