<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inactive_background"
    android:orientation="vertical"
    tools:context="in.dsij.acemomentum.fragment.LoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88666666"
        android:visibility="gone"
        android:id="@+id/top_layout">

        <ImageView
            android:id="@+id/ivInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@drawable/help" />

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/active_background"
        android:paddingLeft="@dimen/bar_side_margin"
        android:paddingRight="@dimen/bar_side_margin">

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:maxLines="1"
            android:text="Sign In"
            android:textAllCaps="true"
            android:textColor="@color/font_header"
            android:textSize="@dimen/font_header"
            app:fontName="@string/font_header" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:layout_weight="1"
        android:background="@color/active_background"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap"
            android:paddingTop="@dimen/default_gap"
            android:textColorHint="@color/font_hint"
            app:errorTextAppearance="@color/font_primary">

            <in.dsij.acemomentum.view.MyEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_primary"
                app:fontName="@string/font_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap"
            android:paddingTop="@dimen/default_gap"
            android:textColorHint="@color/font_hint"
            app:errorTextAppearance="@color/font_primary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/font_inactive">

            <in.dsij.acemomentum.view.MyEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_primary"
                app:fontName="@string/font_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <in.dsij.acemomentum.view.MyTextView
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_live_help_black_24dp"
                android:drawablePadding="5dp"
                android:gravity="top"
                android:text="HELP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_12sp"
                app:fontName="@string/font_regular" />

            <in.dsij.acemomentum.view.MyTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@color/white"
                android:gravity="center"
                android:padding="7.6dp"
                android:text="Forgot Username/Password?"
                android:textColor="@color/font_primary"
                android:textSize="@dimen/font_terms"
                app:fontName="@string/font_regular" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvBtnSignUp"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/active_background"
            android:gravity="center"
            android:text="Sign Up"
            android:textColor="@color/font_secondary_action"
            android:textSize="@dimen/font_button"
            app:fontName="@string/font_button" />

        <android.support.v4.widget.Space
            android:layout_width="@dimen/default_gap"
            android:layout_height="match_parent" />

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvBtnSignIn"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/active_background"
            android:gravity="center"
            android:text="Sign In"
            android:textColor="@color/font_primary_action"
            android:textSize="@dimen/font_button"
            app:fontName="@string/font_button" />
    </LinearLayout>


</LinearLayout>
