<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inactive_background"
    android:orientation="vertical"
    tools:context="in.dsij.acemomentum.fragment.ChangePassword">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/active_background"
        android:paddingLeft="@dimen/bar_side_margin"
        android:paddingRight="@dimen/bar_side_margin"
        android:layout_margin="@dimen/default_gap">

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:maxLines="1"
            android:text="Change Password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_header"
            app:fontName="@string/font_header" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:layout_weight="1"
        android:background="@color/active_background"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap"
            android:paddingTop="@dimen/default_gap"
            app:errorTextAppearance="@color/font_primary"
            android:textColorHint="@color/font_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/font_inactive">
            <in.dsij.acemomentum.view.MyEditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Old Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_primary"
                app:fontName="@string/font_regular" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap"
            android:paddingTop="@dimen/default_gap"
            android:textColorHint="@color/font_hint"
            app:errorTextAppearance="@color/font_primary">

        <in.dsij.acemomentum.view.MyEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New Password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_primary"
            app:fontName="@string/font_regular" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap"
            android:paddingTop="@dimen/default_gap"
            android:textColorHint="@color/font_hint"
            app:errorTextAppearance="@color/font_primary">

        <in.dsij.acemomentum.view.MyEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_primary"
            app:fontName="@string/font_regular" />
        </android.support.design.widget.TextInputLayout>

        <in.dsij.acemomentum.view.MyTextView
            android:id="@+id/tvLabelHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/default_gap"
            android:paddingRight="7.6dp"
            android:paddingTop="7.6dp"
            android:paddingBottom="7.6dp"
            android:text="New password and confirm password must be same"
            android:textColor="@color/font_secondary"
            android:textSize="@dimen/font_terms"
            app:fontName="@string/font_regular" />

    </LinearLayout>

    <in.dsij.acemomentum.view.MyTextView
        android:id="@+id/tvBtnSendLink"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/active_background"
        android:gravity="center"
        android:text="Change Password"
        android:textColor="@color/font_primary_action"
        android:textSize="@dimen/font_button"
        app:fontName="@string/font_button" />

</LinearLayout>
